--- a/gcp-migration-project.html
+++ b/gcp-migration-project.html
@@ -4,13 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>GCP Application Migration & IAM Security Project</title>
+  <title>Project Details - GCP Application Migration</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+<link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+<link rel="icon" type="image/svg+xml" href="assets/img/favicon.svg">
+<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon-96x96.png">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="assets/img/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="assets/img/android-chrome-512x512.png">
+<link rel="manifest" href="assets/img/site.webmanifest">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -36,13 +41,13 @@
   ======================================================== -->
 </head>
 
-<body class="portfolio-details-page">
+<body class="service-details-page">
 
   <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/my-profile1-img.jpg" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -61,14 +66,15 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="index.html" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+      <ul>
+        <li><a href="index.html#hero"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="index.html#about"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="index.html#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
         <li><a href="index.html#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-        <li><a href="index.html#services"><i class="bi bi-hdd-stack navicon"></i> Services</a></li>
-        
-        <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li> 
+        <li><a href="index.html#services"><i class="bi bi-hdd-stack navicon"></i> Certifications</a></li>
+        <li><a href="index.html#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
+
     </nav>
 
   </header>
@@ -78,103 +84,125 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">GCP Application Migration & IAM Security Project</h1>
+        <h1 class="mb-2 mb-lg-0">GCP Application Migration Project</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">GCP Application Migration</li>
+            <li class="current">Project Details</li>
           </ol>
         </nav>
       </div>
     </div><!-- End Page Title -->
 
-    <!-- Portfolio Details Section -->
-    <section id="portfolio-details" class="portfolio-details section">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
+   <!-- ======= Project Details Section ======= -->
+    <section id="service-details" class="service-details section">
+      <div class="container">
         <div class="row gy-4">
 
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper init-swiper">
-
-              <script type="application/json" class="swiper-config">
-                {
-                  "loop": true,
-                  "speed": 600,
-                  "autoplay": {
-                    "delay": 5000
-                  },
-                  "slidesPerView": "auto",
-                  "pagination": {
-                    "el": ".swiper-pagination",
-                    "type": "bullets",
-                    "clickable": true
-                  }
-                }
-              </script>
-
-              <div class="swiper-wrapper align-items-center">
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/product-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/branding-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/books-1.jpg" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
+          <!-- Left Column: Navigation Menu -->
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <ul class="services-list nav nav-tabs flex-column" role="tablist">
+              <li class="nav-item" role="presentation">
+                <a class="nav-link active" data-bs-toggle="tab" href="#gcp-overview" role="tab" aria-selected="true">Project Overview</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" data-bs-toggle="tab" href="#gcp-iam-docker" role="tab" aria-selected="false">IAM & Containerization</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" data-bs-toggle="tab" href="#gcp-storage-automation" role="tab" aria-selected="false">Storage & Automation</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" data-bs-toggle="tab" href="#gcp-results" role="tab" aria-selected="false">Results & Conclusion</a>
+              </li>
+            </ul>
           </div>
 
-          <div class="col-lg-4">
-            <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Infrastructure</li>
-                <li><strong>Client</strong>: Personal Portfolio Project</li>
-                <li><strong>Project date</strong>: 12 June, 2025</li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/sanjayks1330/it-projects-portfolio/tree/main/gcp-application-migration-project</a></li>
-              </ul>
-            </div>
-            <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+          <!-- Right Column: Tab Content -->
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
+            <div class="tab-content">
+
+              <!-- Overview Content Pane -->
+              <div class="tab-pane fade show active" id="gcp-overview" role="tabpanel">
+                <h3>Introduction</h3>
+                <p>
+                  This project simulates a real-world application migration to Google Cloud, demonstrating a multi-phased approach that encompasses modern DevOps and cloud security best practices. It involves containerizing a Python Flask app, deploying it, and establishing robust, least-privilege access controls and logging.
+                </p>
+                <h3>Problem Statement</h3>
+                <p>
+                  A proper cloud migration requires more than a simple "lift-and-shift." Key challenges include establishing granular access controls, creating a repeatable deployment process, and ensuring all access to sensitive data is logged for compliance. This project tackles these issues head-on.
+                </p>
+                <h3>Key Objectives</h3>
+                <ul>
+                  <li><i class="bi bi-check-circle"></i> <span>Design a least-privilege IAM framework with custom roles.</span></li>
+                  <li><i class="bi bi-check-circle"></i> <span>Containerize a web application using Docker for portability.</span></li>
+                  <li><i class="bi bi-check-circle"></i> <span>Implement secure and auditable Cloud Storage with bucket-level policies.</span></li>
+                  <li><i class="bi bi-check-circle"></i> <span>Automate infrastructure setup using Infrastructure as Code (IaC) principles.</span></li>
+                </ul>
+              </div><!-- End Overview Content-->
+
+              <!-- IAM & Containerization Content Pane -->
+              <div class="tab-pane fade" id="gcp-iam-docker" role="tabpanel">
+
+                <h3>Phase 1: IAM Policy Design</h3>
+                <p>
+                  The project's security foundation was built on custom, least-privilege IAM roles defined in YAML files. An `HRViewer` role was created for read-only auditing, while an `EngineeringOperator` role was given specific permissions to manage compute resources, enforcing a clear separation of duties.
+                </p>
+                <h3>Phase 2: Application Containerization</h3>
+                <p>
+                  To ensure portability, a simple Python Flask application (`app.py`) was containerized using a `Dockerfile`. This created a standardized, immutable artifact, decoupling the application from the underlying infrastructure and allowing it to run consistently anywhere. The application was successfully built and tested locally in a Docker container.
+                </p>
+              </div><!-- End IAM & Docker Content-->
+
+              <!-- Storage & Automation Content Pane -->
+              <div class="tab-pane fade" id="gcp-storage-automation" role="tabpanel">
+
+                <h3>Phase 3: Secure Data Management</h3>
+                <p>
+                  A Google Cloud Storage bucket was provisioned as a secure resource with uniform bucket-level access. Fine-grained IAM permissions were applied directly to this bucket, granting `objectViewer` and `objectAdmin` roles to different users.
+                </p>
+                <h3>Infrastructure as Code (IaC)</h3>
+                <p>
+                  A set of Bash scripts (`create-bucket.sh`, `assign-iam-roles.sh`, `enable-logging.sh`) was developed to automate the provisioning of GCS buckets and the assignment of IAM policies via the `gsutil` CLI. This approach makes the entire infrastructure setup programmatic, repeatable, and less prone to human error. Critically, access logging was enabled to a separate, secure bucket for a complete audit trail.
+                </p>
+              </div><!-- End Storage & Automation Content-->
+
+              <!-- Results Content Pane -->
+              <div class="tab-pane fade" id="gcp-results" role="tabpanel">
+  
+                <h3>Implementation Results</h3>
+                <p>
+                  The phased implementation was highly successful. Custom IAM roles were assigned correctly, and the Flask application was successfully containerized and tested. The automation scripts for GCS provisioning ran without error, creating the buckets and applying precise, resource-level permissions as designed.
+                </p>
+                <h3>Conclusion</h3>
+                <p>
+                  This project successfully showcases an end-to-end, security-first approach to moving applications to the cloud. By integrating custom IAM policies, Docker containerization, and automated infrastructure provisioning, it demonstrates a comprehensive skill set in modern cloud administration and DevOps. The resulting architecture is secure, scalable, and observable, aligning perfectly with Google Cloud best practices.
+                </p>
+                <!-- GitHub Button -->
+                <div class="text-center mt-4">
+                  <a href="https://github.com/sanjayks1330/it-projects-portfolio/tree/main/gcp-application-migration-project" target="_blank" rel="noopener noreferrer" class="project-link-btn">Link to the Project</a>
+                </div>
+              </div><!-- End Results Content-->
+
             </div>
           </div>
 
         </div>
-
       </div>
-
-    </section><!-- /Portfolio Details Section -->
-
+    </section><!-- /Project Details Section -->
   </main>
 
   <footer id="footer" class="footer position-relative light-background">
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Sanjay</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by Sanjay</a>
       </div>
     </div>
 
