--- a/index.html
+++ b/index.html
@@ -374,6 +374,17 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/project-1.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>LSTM-Powered Stock Market Paradigm</h4>
+                  <p>Predictive modeling of market behavior using time-series data.</p>                  <a href="assets/img/portfolio/project-1.jpg" data-gallery="portfolio-gallery-book" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="lstm-paradigm.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
 
           </div><!-- End Portfolio Container -->
 
