--- a/incident-response-project.html
+++ b/incident-response-project.html
@@ -95,7 +95,7 @@
     </div><!-- End Page Title -->
 
     <!-- ======= Project Details Section ======= -->
-    <section id="service-details" class="service-details section">
+    <section id="service-details" class="service-details section fst-italic" style="font-family: 'Poppins', sans-serif;">
       <div class="container">
         <div class="row gy-4">
 
@@ -191,7 +191,7 @@
     </section><!-- /Project Details Section -->
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative light-background fst-italic" style="font-family: 'Poppins', sans-serif;">
 
     <div class="container">
       <div class="copyright text-center ">
@@ -202,7 +202,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by Sanjay</a>
+        Designed by Sanjay Krishnan
       </div>
     </div>
 
