--- a/workspace-admin-project.html
+++ b/workspace-admin-project.html
@@ -95,7 +95,7 @@
     </div><!-- End Page Title -->
 
     <!-- ======= Service Details Section ======= -->
-    <section id="service-details" class="service-details section">
+    <section id="service-details" class="service-details section fst-italic" style="font-family: 'Poppins', sans-serif;">
 
       <div class="container">
 
@@ -199,7 +199,7 @@
     </section><!-- /Service Details Section -->
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative light-background fst-italic" style="font-family: 'Poppins', sans-serif;">
 
     <div class="container">
       <div class="copyright text-center ">
@@ -210,7 +210,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by Sanjay</a>
+        Designed by Sanjay Krishnan
       </div>
     </div>
 
