--- a/iam-security-project.html
+++ b/iam-security-project.html
@@ -107,19 +107,19 @@
             <ul class="services-list nav nav-tabs flex-column" role="tablist">
 
               <li class="nav-item" role="presentation">
-                <a class="nav-link active" data-bs-toggle="tab" href="#project-overview" role="tab" aria-selected="true">Project Overview</a>
+                <a class="nav-link active fst-italic" data-bs-toggle="tab" href="#project-overview" role="tab" aria-selected="true" style="font-family: 'Poppins', sans-serif;">Project Overview</a>
               </li>
 
               <li class="nav-item" role="presentation">
-                <a class="nav-link" data-bs-toggle="tab" href="#project-design" role="tab" aria-selected="false">Design & Analysis</a>
+                <a class="nav-link fst-italic" data-bs-toggle="tab" href="#project-design" role="tab" aria-selected="false" style="font-family: 'Poppins', sans-serif;">Design & Analysis</a>
               </li>
 
               <li class="nav-item" role="presentation">
-                <a class="nav-link" data-bs-toggle="tab" href="#project-methodology" role="tab" aria-selected="false">Methodology</a>
+                <a class="nav-link fst-italic" data-bs-toggle="tab" href="#project-methodology" role="tab" aria-selected="false" style="font-family: 'Poppins', sans-serif;">Methodology</a>
               </li>
 
               <li class="nav-item" role="presentation">
-                <a class="nav-link" data-bs-toggle="tab" href="#project-results" role="tab" aria-selected="false">Results & Conclusion</a>
+                <a class="nav-link fst-italic" data-bs-toggle="tab" href="#project-results" role="tab" aria-selected="false" style="font-family: 'Poppins', sans-serif;">Results & Conclusion</a>
               </li>
 
             </ul>
@@ -131,7 +131,7 @@
             <div class="tab-content">
 
               <!-- Overview Content Pane -->
-              <div class="tab-pane fade show active" id="project-overview" role="tabpanel">
+              <div class="tab-pane fade show active fst-italic" id="project-overview" role="tabpanel" style="font-family: 'Poppins', sans-serif;">
                 
 
                 <h3>Introduction & Goal</h3>
@@ -212,7 +212,7 @@
     </section><!-- /Service Details Section -->
   </main>
 
-  <footer id="footer" class="footer position-relative light-background">
+  <footer id="footer" class="footer position-relative light-background fst-italic" style="font-family: 'Poppins', sans-serif;">
 
     <div class="container">
       <div class="copyright text-center ">
@@ -223,7 +223,7 @@
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by Sanjay</a>
+        Designed by Sanjay Krishnan
       </div>
     </div>
 
