--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <a href="https://x.com/Sanjyks" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="https://teams.live.com/l/invite/FEAUmRTRcL_kJreaQI" class="google-plus"><i class="bi bi-skype"></i></a>
+      <a href="https://teams.microsoft.com/l/chat/0/0?users=sanjaykrishnan25@live.com" class="google-plus"><i class="bi bi-skype"></i></a>
       <a href="https://www.linkedin.com/in/sanjay-krishnan-aa985b134/" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
