--- a/iam-security-project.html
+++ b/iam-security-project.html
@@ -57,11 +57,10 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://x.com/Sanjyks" class="twitter"><i class="bi bi-twitter-x"></i></a>
+      <a href="https://www.instagram.com/sanjay_k_s/" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://teams.microsoft.com/l/chat/0/0?users=sanjaykrishnan25@live.com" class="google-plus"><i class="bi bi-skype"></i></a>
+      <a href="https://www.linkedin.com/in/sanjay-krishnan-aa985b134/" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
