--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
     <div class="social-links text-center">
       <a href="https://x.com/Sanjyks" class="twitter"><i class="bi bi-twitter-x"></i></a>
+      <a href="https://www.instagram.com/sanjay_k_s/" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="https://teams.microsoft.com/l/chat/0/0?users=sanjaykrishnan25@live.com" class="google-plus"><i class="bi bi-skype"></i></a>
       <a href="https://www.linkedin.com/in/sanjay-krishnan-aa985b134/" class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
