--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
+  <!-- Preloader! -->
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
